--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "aplicacion para clinicas veterinarias",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
